--- a/_bibliography/publication.bib
+++ b/_bibliography/publication.bib
@@ -1,8 +1,85 @@
 ---
 ---
+@article{hu2019human,
+  title={Human action recognition based on scene semantics},
+  author={Hu, Tao and Zhu, Xinyan and Guo, Wei and Wang, Shaohua and Zhu, Jianfeng},
+  journal={Multimedia Tools and Applications},
+  volume={78},
+  pages={28515--28536},
+  year={2019},
+  publisher={Springer US}
+}
+
+@article{hu2018depth,
+  title={Depth sensor based human detection for indoor surveillance},
+  author={Hu, Tao and Zhang, Hao and Zhu, Xinyan and Clunis, Julaine and Yang, Gelan},
+  journal={Future Generation Computer Systems},
+  volume={88},
+  pages={540--551},
+  year={2018},
+  publisher={North-Holland}
+}
+
+@article{hu2019human,
+  title={Human interaction recognition using spatial-temporal salient feature},
+  author={Hu, Tao and Zhu, Xinyan and Wang, Shaohua and Duan, Lian},
+  journal={Multimedia Tools and Applications},
+  volume={78},
+  pages={28715--28735},
+  year={2019},
+  publisher={Springer US}
+}
+
+@article{yue2018modelling,
+  title={Modelling the effects of street permeability on burglary in Wuhan, China},
+  author={Yue, Han and Zhu, Xinyan and Ye, Xinyue and Hu, Tao and Kudva, Sonali},
+  journal={Applied geography},
+  volume={98},
+  pages={177--183},
+  year={2018},
+  publisher={Pergamon}
+}
+
+@article{hu2018urban,
+  title={Urban crime prediction based on spatio-temporal Bayesian model},
+  author={Hu, Tao and Zhu, Xinyan and Duan, Lian and Guo, Wei},
+  journal={PloS one},
+  volume={13},
+  number={10},
+  year={2018}
+}
+
+@article{she2019bridging,
+  title={Bridging open source tools and Geoportals for interactive spatial data analytics},
+  author={She, Bing and Hu, Tao and Zhu, Xinyan and Bao, Shuming},
+  journal={Geo-spatial Information Science},
+  volume={22},
+  number={3},
+  pages={185--192},
+  year={2019}
+}
+
+@article{zhu2019development,
+  title={Development and implementation of a dynamic and 4D GIS based on semantic location model},
+  author={Zhu, Xinyan and Hu, Tao and Ye, Xinyue and Guo, Wei and Huang, Liang and Xiong, Hanjiang and Ai, Haojun and She, Bing and Xiong, Qing and Duan, Lian},
+  journal={Geo-spatial Information Science},
+  volume={22},
+  number={3},
+  pages={193--213},
+  year={2019}
+}
+
+@article{hu2019systematic,
+  title={A systematic spatial and temporal sentiment analysis on geo-tweets},
+  author={Hu, Tao and She, Bing and Duan, Lian and Yue, Han and Clunis, Julaine},
+  journal={Ieee Access},
+  volume={8},
+  pages={8658--8667},
+  year={2019},
+  publisher={IEEE}
+}
 
 @article{liu2020spatiotemporal,
-  bibtex_show={true},
   title={Spatiotemporal patterns of COVID-19 impact on human activities and environment in mainland China using nighttime light and air quality data},
   author={Liu, Qian and Sha, Dexuan and Liu, Wei and Houser, Paul and Zhang, Luyao and Hou, Ruizhi and Lan, Hai and Flynn, Colin and Lu, Mingyue and Hu, Tao and others},
   journal={Remote Sensing},
@@ -10,8 +87,103 @@
   number={10},
   pages={1576},
   year={2020},
-  publisher={MDPI},
-  abbr={MDPI}
+  publisher={MDPI}
+}
+
+@article{yang2020taking,
+  title={Taking the pulse of COVID-19: A spatiotemporal perspective},
+  author={Yang, Chaowei and Sha, Dexuan and Liu, Qian and Li, Yun and Lan, Hai and Guan, Weihe Wendy and Hu, Tao and Li, Zhenlong and Zhang, Zhiran and Thompson, John Hoot and others},
+  journal={International journal of digital earth},
+  volume={13},
+  number={10},
+  pages={1186--1211},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{hu2020racial,
+  title={Racial segregation, testing sites access, and COVID-19 incidence rate in Massachusetts, USA},
+  author={Hu, Tao and Yue, Han and Wang, Changzhen and She, Bing and Ye, Xinyue and Liu, Regina and Zhu, Xinyan and Bao, Shuming},
+  journal={International Journal of Environmental Research and Public Health},
+  volume={17},
+  number={24},
+  year={2020}
+}
+
+@article{hu2020building,
+  title={Building an Open Resources Repository for COVID-19 Research},
+  author={Hu, Tao and Guan, Weihe Wendy and Zhu, Xinyan and Shao, Yuanzheng and Liu, Lingbo and Du, Jing and Liu, Hongqiang and Zhou, Huan and Wang, Jialei and She, Bing and others},
+  journal={Data and Information Management},
+  volume={4},
+  number={3},
+  pages={148--170},
+  year={2020},
+  publisher={Sciendo}
+}
+
+@article{wang2020examining,
+  title={Examining the change of human mobility adherent to social restriction policies and its effect on COVID-19 cases in Australia},
+  author={Wang, Siqin and Liu, Yan and Hu, Tao},
+  journal={International journal of environmental research and public health},
+  volume={17},
+  number={21},
+  pages={7930},
+  year={2020},
+  publisher={MDPI}
+}
+
+@article{hu2021spatial,
+  title={A spatial--temporal network analysis of patent transfers from US universities to firms},
+  author={Hu, Tao and Zhang, Yin},
+  journal={Scientometrics},
+  volume={126},
+  number={1},
+  pages={27--54},
+  year={2021},
+  publisher={Springer International Publishing}
+}
+
+@article{yan2020does,
+  title={How does scholarly use of academic social networking sites differ by academic discipline? A case study using ResearchGate},
+  author={Yan, Weiwei and Zhang, Yin and Hu, Tao and Kudva, Sonali},
+  journal={Information Processing \& Management},
+  volume={58},
+  number={1},
+  pages={102430},
+  year={2020},
+  publisher={Pergamon}
+}
+
+@article{sha2021spatiotemporal,
+  title={A spatiotemporal data collection of viral cases for COVID-19 rapid response},
+  author={Sha, Dexuan and Liu, Yi and Liu, Qian and Li, Yun and Tian, Yifei and Beaini, Fayez and Zhong, Cheng and Hu, Tao and Wang, Zifu and Lan, Hai and others},
+  journal={Big Earth Data},
+  volume={5},
+  number={1},
+  pages={90--111},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
+@article{wang2021spatiotemporal,
+  title={Spatiotemporal characteristics and factor analysis of SARS-CoV-2 infections among healthcare workers in Wuhan, China},
+  author={Wang, Peixiao and Ren, Hui and Zhu, Xinyan and Fu, Xiaokang and Liu, Hongqiang and Hu, Tao},
+  journal={Journal of Hospital Infection},
+  volume={110},
+  pages={172--177},
+  year={2021},
+  publisher={WB Saunders}
+}
+
+@article{peng2021estimating,
+  title={Estimating unreported COVID-19 cases with a time-varying SIR regression model},
+  author={Peng, Zhenghong and Ao, Siya and Liu, Lingbo and Bao, Shuming and Hu, Tao and Wu, Hao and Wang, Ru},
+  journal={International Journal of Environmental Research and Public Health},
+  volume={18},
+  number={3},
+  pages={1090},
+  year={2021},
+  publisher={MDPI}
 }
 
 @article{zhang2022human,
@@ -25,6 +197,86 @@
   publisher={Taylor \& Francis}
 }
 
+@article{wang2021spatiotemporal,
+  title={Spatiotemporal Differences of COVID-19 Infection Among Healthcare Workers and Patients in China From January to March 2020},
+  author={Wang, Peixiao and Zhu, Xinyan and Guo, Wei and Ren, Hui and Hu, Tao},
+  journal={Ieee Access},
+  volume={9},
+  pages={28646--28657},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{wang2021bibliometric,
+  title={A bibliometric analysis and network visualisation of human mobility studies from 1990 to 2020: Emerging trends and future research directions},
+  author={Wang, Siqin and Zhang, Mengxi and Hu, Tao and Fu, Xiaokang and Gao, Zhe and Halloran, Briana and Liu, Yan},
+  journal={Sustainability},
+  volume={13},
+  number={10},
+  pages={5372},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{hu2021human,
+  title={Human Mobility Data in the COVID-19 Pandemic: Characteristics, Applications, and Challenges},
+  author={Hu, Tao and Wang, Siqin and She, Bing and Zhang, Mengxi and Huang, Xiao and Cui, Yunhe and Khuri, Jacob and Hu, Yaxin and Fu, Xiaokang and Wang, Xiaoyue and others},
+  journal={International Journal of Digital Earth},
+  year={2021}
+}
+
+@article{li2021odt,
+  title={ODT FLOW: Extracting, analyzing, and sharing multi-source multi-scale human mobility},
+  author={Li, Zhenlong and Huang, Xiao and Hu, Tao and Ning, Huan and Ye, Xinyue and Huang, Binghu and Li, Xiaoming},
+  journal={Plos one},
+  volume={16},
+  number={8},
+  pages={e0255259},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{yue2021geographical,
+  title={Geographical detector-based spatial modeling of the COVID-19 mortality rate in the continental United States},
+  author={Yue, Han and Hu, Tao},
+  journal={International journal of environmental research and public health},
+  volume={18},
+  number={13},
+  pages={6832},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{hu2021revealing,
+  title={Revealing public opinion towards COVID-19 vaccines with Twitter data in the United States: spatiotemporal perspective},
+  author={Hu, Tao and Wang, Siqin and Luo, Wei and Zhang, Mengxi and Huang, Xiao and Yan, Yingwei and Liu, Regina and Ly, Kelly and Kacker, Viraj and She, Bing and others},
+  journal={Journal of Medical Internet Research},
+  volume={23},
+  number={9},
+  pages={e30854},
+  year={2021},
+  publisher={JMIR Publications Toronto, Canada}
+}
+
+@article{liu2021spatiotemporal,
+  title={The spatiotemporal interaction effect of COVID-19 transmission in the United States},
+  author={Liu, Lingbo and Hu, Tao and Bao, Shuming and Wu, Hao and Peng, Zhenghong and Wang, Ru},
+  journal={ISPRS International Journal of Geo-Information},
+  volume={10},
+  number={6},
+  pages={387},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{wang2022times,
+  title={The times, they are a-changin’: tracking shifts in mental health signals from early phase to later phase of the COVID-19 pandemic in Australia},
+  author={Wang, Siqin and Huang, Xiao and Hu, Tao and Zhang, Mengxi and Li, Zhenlong and Ning, Huan and Corcoran, Jonathan and Khan, Asaduzzaman and Liu, Yan and Zhang, Jiajia and others},
+  journal={BMJ Global Health},
+  pages={https--gh},
+  year={2022}
+}
+
 @article{wang2022multi,
   title={A multi-view bidirectional spatiotemporal graph network for urban traffic flow imputation},
   author={Wang, Peixiao and Zhang, Tong and Zheng, Yueming and Hu, Tao},
@@ -34,6 +286,27 @@
   pages={1231--1257},
   year={2022},
   publisher={Taylor \& Francis}
+}
+
+@article{wang2022exploring,
+  title={Exploring the impact of under-reported cases on the COVID-19 spatiotemporal distributions using healthcare workers infection data},
+  author={Wang, Peixiao and Hu, Tao and Liu, Hongqiang and Zhu, Xinyan},
+  journal={Cities},
+  volume={123},
+  pages={103593},
+  year={2022},
+  publisher={Pergamon}
+}
+
+@article{wang2022hybrid,
+  title={A hybrid data-driven framework for spatiotemporal traffic flow data imputation},
+  author={Wang, Peixiao and Hu, Tao and Gao, Fei and Wu, Ruijie and Guo, Wei and Zhu, Xinyan},
+  journal={IEEE Internet of Things Journal},
+  volume={9},
+  number={17},
+  pages={16343--16352},
+  year={2022},
+  publisher={IEEE}
 }
 
 @article{yue2023examining,
@@ -67,6 +340,16 @@
   pages={13665},
   year={2022},
   publisher={Nature Publishing Group UK London}
+}
+
+@article{chen2022measurement,
+  title={Measurement of contagion spatial spread probability in public places: A case study on COVID-19},
+  author={Chen, Lu and Liu, Xiuyan and Hu, Tao and Bao, Shuming and Ye, Xinyue and Ma, Ning and Zhou, Xiaoxue},
+  journal={Applied Geography},
+  volume={143},
+  pages={102700},
+  year={2022},
+  publisher={Elsevier}
 }
 
 @article{wang2022subways,
@@ -162,6 +445,12 @@
   publisher={CRC Press}
 }
 
+@article{wang2021spatiotemporal,
+  title={Spatiotemporal Estimation of COVID-19 Outbreak Using Infection Data of Healthcare Workers},
+  author={Wang, P and Hu, T and Bao, S and Liu, H and Zhu, X},
+  year={2021}
+}
+
 @article{wang2022traffic,
   title={Traffic condition estimation and data quality assessment for signalized road networks using massive vehicle trajectories},
   author={Wang, Peixiao and Zhang, Tong and Hu, Tao},
@@ -179,6 +468,12 @@
   pages={e47225},
   year={2023},
   publisher={JMIR Publications Toronto, Canada}
+}
+
+@article{hu2021building,
+  title={Building an Open Resources Repository for Covid-19 Research (preprint)},
+  author={Hu, Tao and Guan, Weihe Wendy and Zhu, Xinyan and Shao, Yuanzheng and Liu, Lingbo and Du, Jing and Liu, Hongqiang and Zhou, Huan and Wang, Jialei and She, Bing and others},
+  year={2021}
 }
 
 @incollection{hu2023actionable,
@@ -219,4 +514,3 @@
   year={2024},
   publisher={Elsevier}
 }
-
